# octa-core-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  baseline_performance.json  conanfile.py
.github/workflows/: ci.yml
bench/: benchmark_main.cpp  profiling_benchmarks.cpp
docs/: Doxyfile  benchmark-user-guide.md  benchmark-validation-report.md  ci-integration-guide.md  codex-gaps.md  game-mechanics.md  gap-analysis-v0.3.2.md  graph-map.md  implementation-plan-overview.md  p1.4-completion-report.md  phase-1-implementation-plan.md  phase-2-implementation-plan.md  phase-3-implementation-plan.md  phase-p0-completion-report.md  phase-p1-implementation-strategy.md  phase-p2-implementation-strategy.md  phase-p2.3.2-completion-report.md  phase-p2.3.3-completion-report.md  phase-p2.3.3-optimization-results.md  phase-p3-implementation-strategy.md  profiling-methodology-guide.md  srd-v0.2.md  srd-v0.3.1.md  srd-v0.3.2.md  srd-v0.3.md  srd.md
docs/html/html/: ArrayGameMap_8cpp.html  ArrayGameMap_8cpp_source.html  ArrayGameMap_8h.html  ArrayGameMap_8h_source.html  Coordinate_8h_source.html  Direction_8h.html  Direction_8h_source.html  Enums_8h.html  Enums_8h_source.html  GameCell_8cpp.html  GameCell_8cpp_source.html  GameCell_8h.html  GameCell_8h_source.html  GameConfig_8h.html  GameConfig_8h_source.html  GameEngine_8cpp.html  GameEngine_8cpp_source.html  GameEngine_8h_source.html  GraphGameMap_8cpp.html  GraphGameMap_8cpp_source.html  GraphGameMap_8h.html  GraphGameMap_8h_source.html  IGameLogic_8h.html  IGameLogic_8h_source.html  IGameMap_8h.html  IGameMap_8h_source.html  Main_8cpp.html  Main_8cpp_source.html  OctaGameLogic_8cpp.html  OctaGameLogic_8cpp_source.html  OctaGameLogic_8h.html  OctaGameLogic_8h_source.html  annotated.html  classArrayGameMap-members.html  classArrayGameMap.html  classCoordinate-members.html  classCoordinate.html  classGameCell-members.html  classGameCell.html  classGameEngine-members.html  (+41 more)
docs/html/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  files_0.js  files_2.js  files_3.js  (+24 more)
godot-demo/: README.md  build_and_run.sh  icon.svg.import  project.godot
godot-demo/.godot/: global_script_class_cache.cfg
godot-demo/.godot/editor/: Main.tscn-editstate-4a24720ee5e787dbe30abc634fa3679d.cfg  editor_layout.cfg  filesystem_cache10  filesystem_update4  project_metadata.cfg  script_editor_cache.cfg
godot-demo/.godot/imported/: icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex  icon.svg-218a8f2b3041327d8a5756f3a245f83b.md5
godot-demo/scenes/: Main.tscn
godot-demo/scripts/: GameController.gd  GameController.gd.uid  OctaCoreAPI.gd  OctaCoreAPI.gd.uid
include/octa-core/bindings/: c_api.h
include/octa-core/core/: CellChange.h  Direction.h  Enums.h  GameCell.h
include/octa-core/engine/: GameEngine.h
include/octa-core/logic/: IGameLogic.h  OctaGameLogic.h
include/octa-core/map/: ArrayGameMap.h  GraphGameMap.h  IGameMap.h
include/octa-core/model/: Coordinate.h  GameConfig.h
profiling_results/: comprehensive_profiling_analysis.md  cpu_analysis_benchmark.txt  memory_analysis_benchmark.txt  optimization_opportunities.md  scalability_cache_analysis.txt
scripts/: README.md  compare_benchmarks.py  generate_coverage.sh  manage.sh  profile_analysis.sh  quick.sh
src/: Main.cpp
src/bindings/: c_api.cpp
src/core/: CellChange.cpp  GameCell.cpp
src/engine/: GameEngine.cpp  GameEngine.cpp.bak
src/logic/: OctaGameLogic.cpp
src/map/: ArrayGameMap.cpp  GraphGameMap.cpp
tests/: test_main.cpp
